--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "My fantastic Nuxt.js project",
   "author": "Laszlo",
   "private": true,
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
