--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Laszlo",
   "private": true,
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
+    "node": "10.x"
   },
   "scripts": {
     "dev": "nuxt",
